--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
+    "stream-chat": "^8.51.0",
+    "stream-chat-react": "^12.8.2",
     "swapy": "^0.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
