--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "stream-chat-react": "^12.8.2",
     "swapy": "^0.2.1",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
